# pysotsog

./: .gitignore  .project  404.html  AGENTS.md  README.md  README.rst  architecture.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml  upload-to-pypi.yml
docs/: index.md
scripts/: blackisort  install  installAndTest  pypi_dist  test
search/: search_index.json
skg/: api.py  citeproc.py  crossref.py  dblp.py  dblp2wikidata.py  doi.py  event.py  graph.py  kg.py  location.py  orcid.py  owl.py  paper.py  profiler.py  ris.py  schema.py  scholar.py  scholargrid.py  search.py  searchengine.py  semantic_scholar.py  skgbrowser.py  smw.py  sotsog.py  sotsog_cmd.py  version.py  wdsearch.py  wikidata.py
skg/resources/queries/: stt.yaml
skg/resources/static/css/: md_style_indigo.css
tests/: base_skg_test.py  basetest.py  testScholarGrid.py  test_api.py  test_crossref.py  test_dblp.py  test_dblp2wikidata.py  test_doi.py  test_location.py  test_orcid.py  test_ris.py  test_scholar.py  test_searchengine.py  test_semantic_scholar.py  test_skg.py  test_smw.py  test_sotsog.py  test_wdsearch.py
