# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysotsog"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
# flit_core.config.ConfigError: license field should be <class 'dict'>, not <class 'str'>
license= "Apache-2.0"
dependencies = [
		# https://github.com/justpy-org/justpy
        'justpy>=0.11.3',
        # https://pypi.org/project/pylodstorage/
        'pyLodStorage>=0.4.7',
        # https://pypi.org/project/habanero/
        'habanero~=1.2.2',
        # https://pypi.org/project/pyJustpyWidgets/
        'pyJustpyWidgets>=0.1.11',
        # https://pypi.org/project/search-engine-parser/
        'search-engine-parser>=0.6.8',
        # https://github.com/fake-useragent/fake-useragent
        'fake-useragent>=0.1.11',
        # https://pypi.org/project/py-3rdparty-mediawiki/
        'py-3rdparty-mediawiki>=0.8.0',
        # https://pypi.org/project/semanticscholar/
        'semanticscholar>=0.3.0',
        # https://arthurdejong.org/python-stdnum/
        'python-stdnum>=1.18'
     ]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "skg/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/pysotsog"
Documentation = "https://wiki.bitplan.com/index.php/Pysotsog"
Source = "https://github.com/WolfgangFahl/pysotsog"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "skg",
]

[project.scripts]
sotsog = "skg.sotsog:main"
